[package]
name = "clipboard-history"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
tray-icon = "0.19"
rdev = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
